Reset current position to 0.00 on the virtual deck by placing the needle at the very beginning of the record.

--- a/README
+++ b/README
@@ -23,3 +23,9 @@ You should have received a copy of the GNU General Public License
 version 2 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 02110-1301, USA.
+
+---
+Placing the needle at the beginning of the record resets the
+track to the beginning (the same as hitting F2/F6/F10 in xwax)
+
+source: https://sourceforge.net/p/xwax/mailman/message/29059609/
